--- a/Atividades/Exerciciosdegramatica2/index - Copy bom com deepseek.html
+++ b/Atividades/Exerciciosdegramatica2/index - Copy bom com deepseek.html
@@ -459,140 +459,30 @@ textarea.answer-input {
     //  (6) Check Answers
     //====================================================
     function checkAllAnswers() {
-    checkCount++;
-    let allCorrect = true;
-    let wrongItems = [];
+        checkCount++;
+        let allCorrect = true;
+        let wrongItems = [];
 
-    // Loop principal das questões
-    questionObjects.forEach(qObj => {
-        //-------------- TEXT INPUT --------------
-        if (qObj.qtype === 'textInput') {
-            const userAnswer = qObj.userInputDOM.value.trim().toLowerCase();
-            const correct = qObj.correctAnswer.trim().toLowerCase();
-            if (userAnswer === correct) {
-                qObj.userInputDOM.classList.remove('incorrect');
-                qObj.userInputDOM.classList.add('correct');
-                qObj.correctSpanDOM.style.display = 'none';
-            } else {
-                allCorrect = false;
-                wrongItems.push(qObj.userInputDOM);
-                qObj.userInputDOM.classList.remove('correct');
-                qObj.userInputDOM.classList.add('incorrect');
-            }
-        }
-
-        //-------------- MULTIPLE CHOICE --------------
-        else if (qObj.qtype === 'multipleChoice') {
-            const radios = qObj.containerDOM.querySelectorAll('input[type="radio"]');
-            let userChoice = null;
-            radios.forEach(r => {
-                if (r.checked) {
-                    userChoice = r.value.trim().toUpperCase();
-                }
-            });
-            if (!userChoice || userChoice !== qObj.correctAnswer.toUpperCase()) {
-                allCorrect = false;
-                wrongItems.push(qObj.containerDOM);
-                qObj.containerDOM.style.color = 'red';
-            } else {
-                qObj.containerDOM.style.color = 'blue';
-            }
-        }
-
-        //-------------- TRUE/FALSE --------------
-        else if (qObj.qtype === 'trueFalse') {
-            const radios = qObj.containerDOM.querySelectorAll('input[type="radio"]');
-            let userChoice = null;
-            radios.forEach(r => {
-                if (r.checked) {
-                    userChoice = r.value.trim().toUpperCase();
-                }
-            });
-            if (!userChoice || userChoice !== qObj.correctAnswer.toUpperCase()) {
-                allCorrect = false;
-                wrongItems.push(qObj.containerDOM);
-                qObj.containerDOM.style.color = 'red';
-            } else {
-                qObj.containerDOM.style.color = 'blue';
-            }
-        }
-
-        //-------------- MATCHING --------------
-        else if (qObj.qtype === 'matching') {
-            let mismatch = false;
-            qObj.pairs.forEach(pair => {
-                const typed = pair.inputDOM.value.trim().toLowerCase();
-                const corr = pair.correctValue.trim().toLowerCase();
-                if (typed !== corr) {
-                    mismatch = true;
-                    wrongItems.push(pair.inputDOM);
-                    pair.inputDOM.classList.remove('correct');
-                    pair.inputDOM.classList.add('incorrect');
-                } else {
-                    pair.inputDOM.classList.remove('incorrect');
-                    pair.inputDOM.classList.add('correct');
-                }
-            });
-            if (mismatch) allCorrect = false;
-        }
-
-        //-------------- ORDERING --------------
-        else if (qObj.qtype === 'ordering') {
-            let containerDOM = qObj.containerDOM;
-            let inputs = containerDOM.querySelectorAll('input.answer-input');
-            let anyWrong = false;
-
-            for (let i = 0; i < qObj.items.length; i++) {
-                const correctPos = qObj.correctPositions[i]; 
-                let userVal = parseInt(inputs[i].value.trim(), 10);
-
-                if (isNaN(userVal) userVal = 0; // Trata valores inválidos como 0
-
-                if (userVal !== correctPos) {
-                    anyWrong = true;
-                    inputs[i].classList.remove('correct');
-                    inputs[i].classList.add('incorrect');
-
-                    let correctSpan = inputs[i].parentNode.querySelector('.correct-answer-span');
-                    if (checkCount >= 3 && correctSpan) {
-                        correctSpan.textContent = `Right position: ${correctPos}`;
-                        correctSpan.style.display = 'inline';
-                    }
-                } else {
-                    inputs[i].classList.remove('incorrect');
-                    inputs[i].classList.add('correct');
-                    let correctSpan = inputs[i].parentNode.querySelector('.correct-answer-span');
-                    if (correctSpan) {
-                        correctSpan.style.display = 'none';
-                    }
-                }
-            }
-
-            if (anyWrong) allCorrect = false;
-        }
-    });
-
-    // Se existem erros e o usuário é aluno atrelado a professor => toco o alarme
-    if (!allCorrect) {
-        if (userData.role === 'aluno' && userData.atrelado_professor && userData.atrelado_professor.trim() !== '') {
-            playAlarm();
-        }
-        if (wrongItems.length > 0 && wrongItems[0].scrollIntoView) {
-            wrongItems[0].scrollIntoView({ behavior: 'smooth', block: 'center' });
-        }
-    }
-
-    //-------------- TERCEIRA TENTATIVA => MOSTRAR RESPOSTAS --------------
-    if (checkCount === 3) {
+        // Loop principal das questões
         questionObjects.forEach(qObj => {
+
+            //-------------- TEXT INPUT --------------
             if (qObj.qtype === 'textInput') {
-                const typed = qObj.userInputDOM.value.trim().toLowerCase();
+                const userAnswer = qObj.userInputDOM.value.trim().toLowerCase();
                 const correct = qObj.correctAnswer.trim().toLowerCase();
-                if (typed !== correct) {
-                    qObj.correctSpanDOM.textContent = `Right answer: ${qObj.correctAnswer}`;
-                    qObj.correctSpanDOM.style.display = 'inline';
+                if (userAnswer === correct) {
+                    qObj.userInputDOM.classList.remove('incorrect');
+                    qObj.userInputDOM.classList.add('correct');
+                    qObj.correctSpanDOM.style.display = 'none';
+                } else {
+                    allCorrect = false;
+                    wrongItems.push(qObj.userInputDOM);
+                    qObj.userInputDOM.classList.remove('correct');
+                    qObj.userInputDOM.classList.add('incorrect');
                 }
             }
+
+            //-------------- MULTIPLE CHOICE --------------
             else if (qObj.qtype === 'multipleChoice') {
                 const radios = qObj.containerDOM.querySelectorAll('input[type="radio"]');
                 let userChoice = null;
@@ -602,12 +492,15 @@ textarea.answer-input {
                     }
                 });
                 if (!userChoice || userChoice !== qObj.correctAnswer.toUpperCase()) {
-                    qObj.containerDOM.insertAdjacentHTML(
-                        'beforeend',
-                        `<div class="exercise-line" style="color:blue; font-weight:bold;">Right answer: ${qObj.correctAnswer}</div>`
-                    );
+                    allCorrect = false;
+                    wrongItems.push(qObj.containerDOM);
+                    qObj.containerDOM.style.color = 'red';
+                } else {
+                    qObj.containerDOM.style.color = 'blue';
                 }
             }
+
+            //-------------- TRUE/FALSE --------------
             else if (qObj.qtype === 'trueFalse') {
                 const radios = qObj.containerDOM.querySelectorAll('input[type="radio"]');
                 let userChoice = null;
@@ -617,90 +510,163 @@ textarea.answer-input {
                     }
                 });
                 if (!userChoice || userChoice !== qObj.correctAnswer.toUpperCase()) {
-                    qObj.containerDOM.insertAdjacentHTML(
-                        'beforeend',
-                        `<div class="exercise-line" style="color:blue; font-weight:bold;">Right answer: ${qObj.correctAnswer}</div>`
-                    );
+                    allCorrect = false;
+                    wrongItems.push(qObj.containerDOM);
+                    qObj.containerDOM.style.color = 'red';
+                } else {
+                    qObj.containerDOM.style.color = 'blue';
                 }
             }
+
+            //-------------- MATCHING --------------
             else if (qObj.qtype === 'matching') {
+                let mismatch = false;
                 qObj.pairs.forEach(pair => {
                     const typed = pair.inputDOM.value.trim().toLowerCase();
                     const corr = pair.correctValue.trim().toLowerCase();
                     if (typed !== corr) {
-                        pair.correctSpanDOM.textContent = `Right answer: ${pair.correctValue}`;
-                        pair.correctSpanDOM.style.display = 'inline';
+                        mismatch = true;
+                        wrongItems.push(pair.inputDOM);
+                        pair.inputDOM.classList.remove('correct');
+                        pair.inputDOM.classList.add('incorrect');
+                    } else {
+                        pair.inputDOM.classList.remove('incorrect');
+                        pair.inputDOM.classList.add('correct');
                     }
                 });
+                if (mismatch) allCorrect = false;
             }
+
+            //-------------- ORDERING --------------
             else if (qObj.qtype === 'ordering') {
                 let containerDOM = qObj.containerDOM;
                 let inputs = containerDOM.querySelectorAll('input.answer-input');
+                let anyWrong = false;
+
                 for (let i = 0; i < qObj.items.length; i++) {
-                    const correctPos = qObj.correctPositions[i];
-                    const userVal = parseInt(inputs[i].value.trim(), 10);
-                    if (userVal !== correctPos) {
-                        const span = inputs[i].parentNode.querySelector('.correct-answer-span');
-                        if (span) {
-                            span.textContent = `Right position: ${correctPos}`;
-                            span.style.display = 'inline';
+                    const correctPos = qObj.correctPositions[i]; 
+                    let userVal = parseInt(inputs[i].value.trim(), 10);
+
+                    if (isNaN(userVal) || userVal !== correctPos) {
+                        anyWrong = true;
+                        inputs[i].classList.remove('correct');
+                        inputs[i].classList.add('incorrect');
+
+                        let correctSpan = inputs[i].parentNode.querySelector('.correct-answer-span');
+                        if (checkCount >= 3 && correctSpan) {
+                            correctSpan.textContent = `Right position: ${correctPos}`;
+                            correctSpan.style.display = 'inline';
+                        }
+                    } else {
+                        inputs[i].classList.remove('incorrect');
+                        inputs[i].classList.add('correct');
+                        let correctSpan = inputs[i].parentNode.querySelector('.correct-answer-span');
+                        if (correctSpan) {
+                            correctSpan.style.display = 'none';
                         }
                     }
                 }
+
+                if (anyWrong) allCorrect = false;
             }
         });
-    }
 
-    // Verificar novamente se todas estão corretas (mesmo após mostrar respostas na 3a tentativa)
-    const finalCheck = questionObjects.every(qObj => {
-        if (qObj.qtype === 'textInput') {
-            return qObj.userInputDOM.value.trim().toLowerCase() === qObj.correctAnswer.trim().toLowerCase();
-        }
-        else if (qObj.qtype === 'multipleChoice') {
-            const radios = qObj.containerDOM.querySelectorAll('input[type="radio"]');
-            let userChoice = null;
-            radios.forEach(r => {
-                if (r.checked) {
-                    userChoice = r.value.trim().toUpperCase();
-                }
-            });
-            return userChoice && userChoice === qObj.correctAnswer.toUpperCase();
-        }
-        else if (qObj.qtype === 'trueFalse') {
-            const radios = qObj.containerDOM.querySelectorAll('input[type="radio"]');
-            let userChoice = null;
-            radios.forEach(r => {
-                if (r.checked) {
-                    userChoice = r.value.trim().toUpperCase();
-                }
-            });
-            return userChoice && userChoice === qObj.correctAnswer.toUpperCase();
-        }
-        else if (qObj.qtype === 'matching') {
-            return qObj.pairs.every(pair => {
-                return pair.inputDOM.value.trim().toLowerCase() === pair.correctValue.trim().toLowerCase();
-            });
-        }
-        else if (qObj.qtype === 'ordering') {
-            let inputs = qObj.containerDOM.querySelectorAll('input.answer-input');
-            for (let i = 0; i < qObj.items.length; i++) {
-                const correctPos = qObj.correctPositions[i];
-                const userVal = parseInt(inputs[i].value.trim(), 10);
-                if (userVal !== correctPos) {
-                    return false;
-                }
+        // Se existem erros e o usuário é aluno atrelado a professor => toco o alarme
+        if (!allCorrect) {
+            if (userData.role === 'aluno' && userData.atrelado_professor && userData.atrelado_professor.trim() !== '') {
+                playAlarm();
             }
-            return true;
+            if (wrongItems.length > 0 && wrongItems[0].scrollIntoView) {
+                wrongItems[0].scrollIntoView({ behavior: 'smooth', block: 'center' });
+            }
         }
-        return true;
-    });
 
-    // Só libera se todas estiverem corretas
-    if (finalCheck) {
-        markPhaseCompleted();
-        showModal();
+        //-------------- TERCEIRA TENTATIVA => MOSTRAR RESPOSTAS --------------
+        if (checkCount === 3) {
+            questionObjects.forEach(qObj => {
+                if (qObj.qtype === 'textInput') {
+                    const typed = qObj.userInputDOM.value.trim().toLowerCase();
+                    const correct = qObj.correctAnswer.trim().toLowerCase();
+                    if (typed !== correct) {
+                        qObj.correctSpanDOM.textContent = `Right answer: ${qObj.correctAnswer}`;
+                        qObj.correctSpanDOM.style.display = 'inline';
+                    }
+                }
+                else if (qObj.qtype === 'multipleChoice') {
+                    const radios = qObj.containerDOM.querySelectorAll('input[type="radio"]');
+                    let userChoice = null;
+                    radios.forEach(r => {
+                        if (r.checked) {
+                            userChoice = r.value.trim().toUpperCase();
+                        }
+                    });
+                    if (!userChoice || userChoice !== qObj.correctAnswer.toUpperCase()) {
+                        qObj.containerDOM.insertAdjacentHTML(
+                            'beforeend',
+                            `<div class="exercise-line" style="color:blue; font-weight:bold;">Right answer: ${qObj.correctAnswer}</div>`
+                        );
+                    }
+                }
+                else if (qObj.qtype === 'trueFalse') {
+                    const radios = qObj.containerDOM.querySelectorAll('input[type="radio"]');
+                    let userChoice = null;
+                    radios.forEach(r => {
+                        if (r.checked) {
+                            userChoice = r.value.trim().toUpperCase();
+                        }
+                    });
+                    if (!userChoice || userChoice !== qObj.correctAnswer.toUpperCase()) {
+                        qObj.containerDOM.insertAdjacentHTML(
+                            'beforeend',
+                            `<div class="exercise-line" style="color:blue; font-weight:bold;">Right answer: ${qObj.correctAnswer}</div>`
+                        );
+                    }
+                }
+                else if (qObj.qtype === 'matching') {
+                    qObj.pairs.forEach(pair => {
+                        const typed = pair.inputDOM.value.trim().toLowerCase();
+                        const corr = pair.correctValue.trim().toLowerCase();
+                        if (typed !== corr) {
+                            pair.correctSpanDOM.textContent = `Right answer: ${pair.correctValue}`;
+                            pair.correctSpanDOM.style.display = 'inline';
+                        }
+                    });
+                }
+                else if (qObj.qtype === 'ordering') {
+                    let containerDOM = qObj.containerDOM;
+                    let inputs = containerDOM.querySelectorAll('input.answer-input');
+                    for (let i = 0; i < qObj.items.length; i++) {
+                        const correctPos = qObj.correctPositions[i];
+                        const userVal = parseInt(inputs[i].value.trim(), 10);
+                        if (userVal !== correctPos) {
+                            const span = inputs[i].parentNode.querySelector('.correct-answer-span');
+                            if (span) {
+                                span.textContent = `Right position: ${correctPos}`;
+                                span.style.display = 'inline';
+                            }
+                        }
+                    }
+                }
+            });
+            markPhaseCompleted();
+            showModal();
+        } else {
+            // Se não é terceira tentativa e está tudo certo => concluído
+            if (allCorrect) {
+                markPhaseCompleted();
+                showModal();
+            }
+        }
     }
-}
+
+    function showModal() {
+        const overlay = document.getElementById('completion-modal-overlay');
+        overlay.style.display = 'flex';
+    }
+    function closeModal() {
+        const overlay = document.getElementById('completion-modal-overlay');
+        overlay.style.display = 'none';
+    }
 
     //====================================================
     //  (7) Parsing the lines into questionObjects
