--- a/Atividades/Exerciciosdegramatica2/index.html
+++ b/Atividades/Exerciciosdegramatica2/index.html
@@ -458,7 +458,7 @@ textarea.answer-input {
     //====================================================
     //  (6) Check Answers
     //====================================================
-    function checkAllAnswers() {
+   function checkAllAnswers() {
     checkCount++;
     let allCorrect = true;
     let wrongItems = [];
@@ -546,7 +546,7 @@ textarea.answer-input {
                 const correctPos = qObj.correctPositions[i]; 
                 let userVal = parseInt(inputs[i].value.trim(), 10);
 
-                if (isNaN(userVal) userVal = 0; // Trata valores inválidos como 0
+                if (isNaN(userVal)) userVal = 0; // Corrigido: faltava o parêntese
 
                 if (userVal !== correctPos) {
                     anyWrong = true;
