--- a/Atividades/Exerciciosdegramatica2/index.html
+++ b/Atividades/Exerciciosdegramatica2/index.html
@@ -546,7 +546,7 @@ textarea.answer-input {
                 const correctPos = qObj.correctPositions[i]; 
                 let userVal = parseInt(inputs[i].value.trim(), 10);
 
-                if (isNaN(userVal)) userVal = 0; // Corrigido: faltava o parêntese
+                if (isNaN(userVal)) userVal = 0;
 
                 if (userVal !== correctPos) {
                     anyWrong = true;
@@ -583,7 +583,7 @@ textarea.answer-input {
     }
 
     //-------------- TERCEIRA TENTATIVA => MOSTRAR RESPOSTAS --------------
-    if (checkCount === 3) {
+    if (checkCount === 3 && !allCorrect) {
         questionObjects.forEach(qObj => {
             if (qObj.qtype === 'textInput') {
                 const typed = qObj.userInputDOM.value.trim().toLowerCase();
@@ -639,7 +639,7 @@ textarea.answer-input {
                 for (let i = 0; i < qObj.items.length; i++) {
                     const correctPos = qObj.correctPositions[i];
                     const userVal = parseInt(inputs[i].value.trim(), 10);
-                    if (userVal !== correctPos) {
+                    if (isNaN(userVal) || userVal !== correctPos) {
                         const span = inputs[i].parentNode.querySelector('.correct-answer-span');
                         if (span) {
                             span.textContent = `Right position: ${correctPos}`;
@@ -686,7 +686,7 @@ textarea.answer-input {
             for (let i = 0; i < qObj.items.length; i++) {
                 const correctPos = qObj.correctPositions[i];
                 const userVal = parseInt(inputs[i].value.trim(), 10);
-                if (userVal !== correctPos) {
+                if (isNaN(userVal) || userVal !== correctPos) {
                     return false;
                 }
             }
