--- a/Atividades/Exerciciosdegramatica2/index.html
+++ b/Atividades/Exerciciosdegramatica2/index.html
@@ -702,6 +702,15 @@ textarea.answer-input {
     }
 }
 
+    function showModal() {
+        const overlay = document.getElementById('completion-modal-overlay');
+        overlay.style.display = 'flex';
+    }
+    function closeModal() {
+        const overlay = document.getElementById('completion-modal-overlay');
+        overlay.style.display = 'none';
+    }
+
     //====================================================
     //  (7) Parsing the lines into questionObjects
     //====================================================
