--- a/Atividades/Exerciciosdegramatica2/index.html
+++ b/Atividades/Exerciciosdegramatica2/index.html
@@ -1562,6 +1562,52 @@ function parseFileLines(lines) {
         });
     }
 
+// ====================================================
+//  (10-A) Indicar carregamento enquanto o PDF é gerado
+// ====================================================
+function showLoadingIndicator() {
+    // overlay de tela inteira
+    const overlay = document.createElement('div');
+    overlay.className = 'pdf-loading';
+    Object.assign(overlay.style, {
+        position: 'fixed',
+        top: '0',
+        left: '0',
+        width: '100%',
+        height: '100%',
+        background: 'rgba(0,0,0,0.45)',
+        display: 'flex',
+        justifyContent: 'center',
+        alignItems: 'center',
+        zIndex: '10000'
+    });
+
+    // spinner simples
+    const spinner = document.createElement('div');
+    Object.assign(spinner.style, {
+        width: '60px',
+        height: '60px',
+        border: '8px solid #f3f3f3',
+        borderTop: '8px solid #000',
+        borderRadius: '50%',
+        animation: 'spin 1s linear infinite'
+    });
+    overlay.appendChild(spinner);
+
+    // keyframes da animação
+    const styleTag = document.createElement('style');
+    styleTag.textContent = `
+        @keyframes spin {
+            0%   { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }`;
+    document.head.appendChild(styleTag);
+
+    // coloca na página e devolve para depois remover
+    document.body.appendChild(overlay);
+    return overlay;
+}
+
     //====================================================
     //  (11) Função para mostrar exemplos (primeiro item de cada exercício)
     //====================================================
