--- a/Atividades/Exerciciosdegramatica2/index.html
+++ b/Atividades/Exerciciosdegramatica2/index.html
@@ -1361,20 +1361,20 @@ function parseFileLines(lines) {
         }
     }
 
-  // ====================================================
-//  (10) Geração de PDF – versão final
+    // ====================================================
+//  (10) Geração de PDF – versão final (única)
 // ====================================================
 async function generatePDF() {
   try {
     const { jsPDF } = window.jspdf;
     const doc = new jsPDF('p', 'pt', 'a4');
 
-    // overlay de “gerando…”
+    // overlay “gerando…”
     const loadingElement = showLoadingIndicator();
 
-    // clona, limpa e organiza o conteúdo
+    // clona e prepara o conteúdo
     const containerClone = preparePDFContent();
-    enhancePagination(containerClone);   // ← apenas organiza para evitar quebras
+    enhancePagination(containerClone);
 
     // gera o PDF
     await doc.html(containerClone, {
@@ -1393,7 +1393,7 @@ async function generatePDF() {
         allowTaint     : true,
         letterRendering: true
       },
-      callback: (pdf) => {
+      callback: pdf => {
         loadingElement.remove();
         pdf.save('Grammar_Exercises.pdf');
       }
@@ -1404,30 +1404,7 @@ async function generatePDF() {
     alert('Error generating PDF: ' + error.message);
     document.querySelector('.pdf-loading')?.remove();
   }
-}
-            
-            // Gera o PDF
-           await doc.html(containerClone, {
-  x: 15,
-  y: 15,
-  width: 570,                 // ≃ 210 mm – 2 cm de margem
-  autoPaging: 'slice',        // respeita a altura real dos elementos
-  pagebreak: {
-    mode: ['css', 'legacy'],  // lê page-break-inside/before/after + fallback
-    avoid : '.page-break-avoid',   // nunca divide esses nós
-    before: '.force-page-break'    // força quebra antes destes
-  },
-  html2canvas: {
-    scale       : 0.75,
-    useCORS     : true,
-    allowTaint  : true,
-    letterRendering: true
-  },
-  callback: pdf => {
-    loadingElement.remove();   // some o spinner
-    pdf.save('Grammar_Exercises.pdf');
-  }
-});             
+}     
                 
     function preparePDFContent() {
         const containerOriginal = document.querySelector('.container');
