--- a/Atividades/Exerciciosdegramatica2/index.html
+++ b/Atividades/Exerciciosdegramatica2/index.html
@@ -1399,20 +1399,22 @@ async function generatePDF () {
       },
 
       onclone: docClone => {
-        // 3) Pequeno ajuste de fonte para caber melhor em A4
-        docClone.body.classList.add('pdf-optimized');
-        const extra = document.createElement('style');
-        extra.textContent = `
-          .pdf-optimized {
-            font-size: 13px !important;
-            line-height: 1.4 !important;
-          }
-          .answer-input, textarea {
-            border: 1px solid #000 !important;
-          }
-        `;
-        docClone.head.appendChild(extra);
-      },
+  const style = document.createElement('style');
+  style.textContent = `
+    /* corpo do PDF  ↓– base ≃ 11 px  */
+    .pdf-optimized, .pdf-optimized body {
+      font-size: 11px !important;
+      line-height: 1.35 !important;
+    }
+    /* campos de resposta com borda fina */
+    .pdf-optimized .answer-input,
+    .pdf-optimized textarea {
+      border: 1px solid #000 !important;
+    }
+  `;
+  docClone.head.appendChild(style);
+  docClone.body.classList.add('pdf-optimized');
+}
 
       callback: (pdf) => {
         loading.remove();
