--- a/Atividades/Exerciciosdegramatica2/index.html
+++ b/Atividades/Exerciciosdegramatica2/index.html
@@ -1393,17 +1393,19 @@ async function generatePDF () {
       },
 
       html2canvas: {
-        scale : 1,                      // melhor equilíbrio nitidez/tamanho
+        scale : 0.5,                      // melhor equilíbrio nitidez/tamanho
         useCORS: true,
         allowTaint: true
       },
 
       onclone: docClone => {
+   docClone.body.style.transform       = 'scale(0.8)';
+        docClone.body.style.transformOrigin = 'top left';
   const style = document.createElement('style');
   style.textContent = `
-    /* corpo do PDF  ↓– base ≃ 11 px  */
+    /* corpo do PDF  ↓– base ≃ 10 px  */
     .pdf-optimized, .pdf-optimized body {
-      font-size: 11px !important;
+      font-size: 1opx !important;
       line-height: 1.35 !important;
     }
     /* campos de resposta com borda fina */
