--- a/Atividades/Perguntas Starter/PreguntasST.html
+++ b/Atividades/Perguntas Starter/PreguntasST.html
@@ -187,8 +187,9 @@
 
   // Base para assets e arquivo:
   // Ex.: ../../starter/1/QA/questions.txt
-  const BASE = `../../${level}/${unit}/QA`;
-  const QFILE = `${BASE}/questions.txt`;
+   const BASE = `../../Level${level}/Unit${unit}/QA`;
+   const QFILE = `${BASE}/questions.txt`;
+
 
   // ====== Estado ======
   let questions = [];
