--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -404,13 +404,17 @@ btnNext.onclick = () => {
 
   // ====== Áudio do prompt ======
   function playPrompt(q){
-    if(q.promptAudio){
-      const a = new Audio(absPath(q.promptAudio));
-      a.play().catch(()=>{ speak(q.prompt); });
-    } else {
-      speak(q.prompt);
-    }
+  if (q.promptAudio){
+    const a = new Audio(absPath(q.promptAudio));
+    a.play().catch(()=>{ speak(q.prompt); });
+  } else if (q.targetWord){
+    // se você passar "targetWord" no JSON (ex.: "dog"), o TTS fala a palavra
+    speak(q.targetWord);
+  } else {
+    // fallback: fala o texto do prompt
+    speak(q.prompt);
   }
+}
 
   // ====== Fim ======
   function finish(){
